--- a/QuanLyThongTinDaoTao/Views/Shared/_MainLayout.cshtml
+++ b/QuanLyThongTinDaoTao/Views/Shared/_MainLayout.cshtml
@@ -74,7 +74,7 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Học Tập</a>
                     <div class="dropdown-menu fade-down m-0">
-                        <a href="@Url.Action("LichHoc", "QuanLyHocTap")" class="dropdown-item">Lịch Học</a>
+                        <a href="@Url.Action("Index", "TraCuuLichHoc")" class="dropdown-item">Lịch Học</a>
                         <a href="@Url.Action("Index", "TraCuu")" class="dropdown-item">Xem Lớp học đang chiêu sinh</a>
                     </div>
                 </div>
