--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/HocVien/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/HocVien/Index.cshtml
@@ -14,9 +14,7 @@
               Thêm học viên
             </a>
             <input type="text" class="form-control w-50" id="searchInput" placeholder="Tìm kiếm theo mã, tên, email..." />
-            <button class="btn btn-primary" type="submit">
-                <i class="fas fa-search"></i>
-            </button>
+           
 
             <button class="btn btn-danger d-none" id="btnXoaNhieu" onclick="xoaNhieu()">
                 <i class="bi bi-trash3"></i> Xóa Tất Cả
@@ -102,7 +100,31 @@
         let anyChecked = $(".check-item:checked").length > 0;
         $("#btnXoaNhieu").toggleClass("d-none", !anyChecked);
     }
+    $(document).ready(function () {
+        // Tìm kiếm realtime
+        $("#searchInput").on("input", function () {
+            var keyword = $(this).val().toLowerCase();
+            $("#hocVienTable tbody tr").filter(function () {
+                $(this).toggle($(this).text().toLowerCase().indexOf(keyword) > -1);
+            });
+        });
 
+        // Check all
+        $("#checkAll").click(function () {
+            $(".check-item").prop('checked', $(this).prop('checked'));
+            toggleDeleteButton();
+        });
+
+        // Toggle delete button
+        $(".check-item").on('change', function () {
+            toggleDeleteButton();
+        });
+
+        function toggleDeleteButton() {
+            let anyChecked = $(".check-item:checked").length > 0;
+            $("#btnXoaNhieu").toggleClass("d-none", !anyChecked);
+        }
+    });
     function xoaNhieu() {
         let ids = $(".check-item:checked").map(function () {
             return $(this).val();
