--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Index.cshtml
@@ -15,9 +15,7 @@
                 <i class="bi bi-plus-circle"></i> Thêm lớp học
             </a>
             <input type="text" class="form-control w-50" id="searchInput" placeholder="Tìm kiếm theo mã, tên,.." />
-            <button class="btn btn-primary" type="submit" id="btnTimKiem">
-                <i class="fas fa-search"></i>
-            </button>
+          
             <button class="btn btn-danger d-none" id="btnXoaNhieu" onclick="xoaNhieu()">
                 <i class="bi bi-trash3"></i> Xóa đã chọn
             </button>
@@ -57,7 +55,7 @@
     </div>
 </div>
 
-    <script>
+<script>
     $(function () {
         // Xử lý khi chọn khóa học trong dropdown
         $('#KhoaHocId').change(function () {
@@ -102,4 +100,16 @@
         capNhatTrangThaiLopHoc();
         setInterval(capNhatTrangThaiLopHoc, 30000);
     });
-    </script>
+    $(function () {
+        // Xử lý tìm kiếm realtime
+        $('#searchInput').on('input', function () {
+            var keyword = $(this).val().toLowerCase(); // Lấy giá trị từ ô tìm kiếm và chuyển thành chữ thường
+
+            // Lọc từng hàng trong bảng
+            $('#tableBody tr').filter(function () {
+                // Kiểm tra xem từ khóa có xuất hiện trong bất kỳ nội dung nào của dòng không
+                $(this).toggle($(this).text().toLowerCase().indexOf(keyword) > -1);
+            });
+        });
+    });
+</script>
